--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fr.eni.lokacar">
 
+
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
@@ -16,15 +17,48 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name"></activity>
-        <activity android:name=".DetailsClientActivity">
+            android:label="@string/app_name">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".ResumeLocationActivity"></activity>
+        <activity android:name=".ListVehiculesActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="fr.eni.lokacar.LoginActivity" />
+        </activity>
+        <activity android:name=".DetailVehiculeActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="fr.eni.lokacar.ListVehiculesActivity" />
+        </activity>
+        <activity android:name=".ConfigurationActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="fr.eni.lokacar.ListVehiculesActivity" />
+        </activity>
+        <activity android:name=".CreerVehiculeActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="fr.eni.lokacar.ListVehiculesActivity" />
+        </activity>
+        <activity android:name=".DetailsClientActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="fr.eni.lokacar.ResumeLocationActivity" />
+        </activity>
+        <activity android:name=".ResumeLocationActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="fr.eni.lokacar.DetailVehiculeActivity" />
+        </activity>
+
+
     </application>
 
 </manifest>
